    descriptions for firewire devices. When #405421 was filed,
    sysfs-update-devnames had not been fixed to look in
    /sys/class/net/<foo>/device/bus and so firewire interfaces lacked special
    descriptions.

  [ dann frazier ]
  * Remove unused extern declaration for netcfg_get_dhcp() function in
    netcfg.h. This function was removed in r15113.

 -- dann frazier <dannf@debian.org>  Fri, 12 Oct 2007 10:55:09 -0600

netcfg (1.39) unstable; urgency=low

  * Switch to dhcp3 as the default DHCP client in the installer.

  [ Updated translations ]
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Tamil (ta.po) by Dr.T.Vasudevan
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Frans Pop <fjp@debian.org>  Fri, 13 Jul 2007 00:54:52 +0200

netcfg (1.38) unstable; urgency=low

  [ Colin Watson ]
  * Copy udev's persistent-net rules to the target system if possible
    (closes: #259747).

  [ Christian Perrier ]
  * Consistent writing in templates: use "has been aborted" instead
    of "will be aborted"

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Catalan (ca.po) by Jordi Mallach
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Japanese (ja.po) by Kenshi Muto
  * Dutch (nl.po) by Frans Pop
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor
  * Russian (ru.po) by Yuri Kozlov
  * Vietnamese (vi.po) by Clytie Siddall
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:31:33 +0200

netcfg (1.37) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Fix backup from netcfg/no_interfaces to behave more usefully.
    - Give up gracefully if netcfg/wireless_essid was preseeded but
      association failed.

  [ Joey Hess ]
  * Multiply menu-item-numbers by 100

  [ Updated translations ]