@@ -68,3 +68,8 @@ Type: text
 Description: for internal use; can be preseeded
  Timeout for trying DHCP
 Default: 15
+
+Template: netcfg/dhcp_ntp_servers
+Type: text
+Description: for internal use
+ NTP servers provided by DHCP
