@@ -89,6 +89,10 @@ case "$reason" in
         # Get the domain name into a file suitable for netcfg to read.
         echo -n "$new_domain_name" > /tmp/domain_name
 
+        if [ -n "$new_ntp_servers" ]; then
+            echo -n "$new_ntp_servers" > /tmp/dhcp-ntp-servers
+        fi
+
         ;;
 
     EXPIRE|FAIL|RELEASE|STOP)
