@@ -19,8 +19,10 @@ netcfg (1.40) UNRELEASED; urgency=low
   [ dann frazier ]
   * Remove unused extern declaration for netcfg_get_dhcp() function in
     netcfg.h. This function was removed in r15113.
+  * Request ntp-servers option from dhcp server and store in
+    netcfg/dhcp_ntp_servers for later processing by clock-setup.
 
- -- dann frazier <dannf@debian.org>  Fri, 12 Oct 2007 10:55:09 -0600
+ -- dann frazier <dannf@debian.org>  Fri, 19 Oct 2007 16:24:28 -0600
 
 netcfg (1.39) unstable; urgency=low
 
